--- a/enidindex.html
+++ b/enidindex.html
@@ -9,7 +9,7 @@
 	<meta content="" name="description">
 	<meta content="" name="author"><!-- Bootstrap CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet"><!-- Custom CSS -->
-	<link href="css/one-page-wonder.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
